--- a/Rathamapp.html
+++ b/Rathamapp.html
@@ -22,8 +22,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
                 <li><a href="mainabout.html" >About</a></li>
                 <li><a href="login.html">Chariots</a></li>
                 <li><a href="maincontact.html">Contact</a></li>
-                <li><button><a href="login.html">Login</a></button></li>
-                <li><button><a href="signup.html">Signup</a></button></li>
+                <li><button><a href="index.html">Login</a></button></li>
+              
               </ul>
             </div>
           </div>
