--- a/mainabout.html
+++ b/mainabout.html
@@ -23,8 +23,8 @@
             <li><a href="mainabout.html" class="active">About</a></li>
             <li><a href="login.html"  >Chariots</a></li>
             <li><a href="maincontact.html">Contact</a></li>
-            <li><button class="btn" ><a href="login.html">Login</a></button></li>
-            <li><button class="btn" ><a href="signup.html">Signup</a></button></li>
+            <li><button class="btn" ><a href="index.html">Login</a></button></li>
+          
             
           </ul>
         </div>
