--- a/mainabout.html
+++ b/mainabout.html
@@ -21,7 +21,7 @@
           <ul id="nav-links">
             <li><a href="Rathamapp.html">Home</a></li>
             <li><a href="mainabout.html" class="active">About</a></li>
-            <li><a href="login.html"  >Chariots</a></li>
+            <li><a href="index.html"  >Chariots</a></li>
             <li><a href="maincontact.html">Contact</a></li>
             <li><button class="btn" ><a href="index.html">Login</a></button></li>
           
