--- a/maincontact.html
+++ b/maincontact.html
@@ -18,7 +18,7 @@
               <ul id="nav-links">
                 <li><a href="Rathamapp.html">Home</a></li>
                 <li><a href="mainabout.html" >About</a></li>
-                <li><a href="login.html"  >Chariots</a></li>
+                <li><a href="index.html"  >Chariots</a></li>
                 <li><a href="maincontact.html" class="active">Contact</a></li>
                 <li><button class="btn" ><a href="index.html">Login</a></button></li>
                 
